# effectivecpp

./: CMakeLists.txt  efftivecpp.md  readme.md  sdl2.md
include/: baseitem.h  utility.h
src/: baseitem.cpp  main.cpp
